<resources>
    <string name="app_name">Rentalio</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_help">Help</string>
    <string name="title_account">Account</string>
    <string name="banner_slider">Banner Slider</string>
    <string name="car_image">Car Image</string>
    <string name="car_name">HONDA BRIO</string>
    <string name="car_seat">4 SEAT</string>
    <string name="car_year">2010 - 2015</string>
    <string name="car_color">Warna Mobil</string>
    <string name="driver_service">Driver Service</string>
    <string name="with_driver">With\nDriver</string>
    <string name="without_driver">Without\nDriver</string>
    <string name="transmission">Transmission</string>
    <string name="from">FROM</string>
    <string name="from_date">Sat, Feb 29, 2018 - 17:00 PM</string>
    <string name="to">TO</string>
    <string name="to_date">Sun, Mar 1, 2018 - 17:00 PM</string>
    <string name="place">Ngurah Rai International Airport</string>
    <string name="place_ic">Tempat</string>
    <string name="transmission_at">AT</string>
    <string name="transmission_at_detail">Automatic Transmission</string>
    <string name="transmission_mt">MT</string>
    <string name="transmission_mt_detail">Manual Transmission</string>
    <string name="price_estimate">PRICE ESTIMATE</string>
    <string name="price_detail">Rp. 350 / 24 Hour\nX 7 DAYS</string>
    <string name="total">TOTAL</string>
    <string name="price_total">Rp. 2.100.000</string>
    <string name="check_agree">I AGREE TO ALL TERMS AND CONDITION APPLIED\n(Please swipe Right to see the terms condition)</string>
    <string name="btn_book">BOOK NOW</string>
    <string name="rentalio_pocket">Rentalio\nPocket</string>
    <string name="procket_total">Rp. 100.000,-</string>
    <string name="name">NAME</string>
    <string name="btn_save">Save</string>
    <string name="date_select">4 days selected</string>
    <string name="date_clear">Clear</string>
    <string name="date_pick_up">PICK UP</string>
    <string name="date_return">RETURN</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="date_close">Date Close</string>
</resources>