<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver_service" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/with_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/with_driver"
            android:textStyle="bold"
            android:background="@color/rentalio_white" />

        <TextView
            android:id="@+id/without_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/without_driver"
            android:textStyle="bold"
            android:background="@color/rentalio_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_transmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/transmission" />

    <LinearLayout
        android:id="@+id/transmission_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/transmission_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/rentalio_orange">

            <TextView
                android:id="@+id/transmission_at_tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/transmission_at"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/rentalio_white" />

            <TextView
                android:id="@+id/transmission_at_tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transmission_at_detail"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/rentalio_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/transmission_mt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/rentalio_white">

            <TextView
                android:id="@+id/transmission_mt_tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/transmission_mt"
                android:textStyle="bold"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/transmission_mt_tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transmission_mt_detail"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textStyle="bold"
                android:textColor="@color/rentalio_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/bg_text_date"
                android:text="@string/from_date"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                android:textAlignment="center"
                android:textColor="@color/rentalio_black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/to"
                android:textStyle="bold"
                android:textColor="@color/rentalio_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/bg_text_date"
                android:text="@string/to_date"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                android:textAlignment="center"
                android:textColor="@color/rentalio_black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_text_date"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_baseline_place_24"
            android:layout_gravity="center"
            android:contentDescription="@string/place_ic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/place"
            android:textAlignment="center"
            android:textColor="@color/rentalio_black" />
    </LinearLayout>

</LinearLayout>