<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:src="@drawable/car_img"
            android:contentDescription="@string/car_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="26sp"
                android:textColor="@color/rentalio_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_seat"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_year"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/color_box"
                    android:contentDescription="@string/car_color"
                    android:background="@color/rentalio_orange" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/color_box"
                    android:contentDescription="@string/car_color"
                    android:background="@color/rentalio_grey_light" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/color_box"
                    android:contentDescription="@string/car_color"
                    android:background="@color/rentalio_black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/color_box"
                    android:contentDescription="@string/car_color"
                    android:background="@color/rentalio_choco" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>