<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/date_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                android:contentDescription="@string/date_close" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/date_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_clear"
                android:textColor="@color/rentalio_black"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:id="@+id/date_pick_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_pick_up"
                android:textSize="16sp"
                android:textColor="@color/rentalio_black"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/date_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_return"
                android:textSize="16sp"
                android:textColor="@color/rentalio_black"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <pl.rafman.scrollcalendar.ScrollCalendar
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/rentalio_grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/day_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_select"
                android:textColor="@color/rentalio_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rentalio_blue"
                android:padding="13dp"
                android:text="@string/btn_save"
                android:enabled="false"
                android:textAllCaps="false"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>